# platform_serial

./: .editorconfig  .gitattributes  .gitignore  .pubignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  GitVersion.yml  LICENSE  README.md  SECURITY.md  analysis_options.yaml  hooks.json  pubspec.yaml
.devcontainer/: devcontainer.json
.githooks/: _lib.sh  commit-msg  install.ps1  install.sh  post-checkout  pre-commit  pre-push
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  mcp-config.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/agents/: gem-implementer-mobile.agent.md  gem-mobile-tester.agent.md  performance-optimizer.agent.md  principal-software-engineer.agent.md  release-manager.agent.md  security-vulnerability-auditor.agent.md  test-generator-e2e.agent.md  test-generator-good-bad-edge.agent.md  test-generator-integration.agent.md  test-generator-unit.agent.md
.github/collections/: awesome-copilot-mobile-stack.json
.github/instructions/: dart-n-flutter.instructions.md  flutter-serial-architecture.instructions.md  security-vulnerability-optimization.instructions.md
.github/rulesets/: gitflow-branch-protection.json
.github/workflows/: gitflow-policy.yml  publish-release.yml  test-pr.yml
android/: build.gradle
containers/: README.md  docker-compose.yml
containers/analyze/: Dockerfile  entrypoint.sh
containers/base/: Dockerfile
containers/builder/: Dockerfile  entrypoint.sh
containers/devcontainer/: Dockerfile
containers/security/: Dockerfile  entrypoint.sh
containers/test/: Dockerfile  (+1 more)
doc/: COMPLETION_REPORT.md  GITFLOW.md  GITHUB_SETUP.md  GOOGLE_OAUTH_SETUP.md  HOOKS.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  INTEGRATION.md  PLATFORM_ARCHITECTURE.md  PROFESSIONALIZATION.md  WEB_WASM.md
docs/: CHANGELOG.md  GITHUB_SETUP.md  GOOGLE_OAUTH_SETUP.md  IMPLEMENTATION_CHECKLIST.md  NATIVE_IMPLEMENTATIONS.md  PLATFORM_ARCHITECTURE.md  STATUS.md
example/: .metadata  pubspec.yaml
ios/: platform_serial.podspec
lib/: platform_serial.dart  platform_serial_web.dart
linux/: CMakeLists.txt  platform_serial_plugin.cc  platform_serial_plugin.h  serial_port.c  serial_port.h  serial_port_manager.c  serial_port_manager.h
linux/include/platform_serial/: platform_serial_plugin.h
macos/: platform_serial.podspec
scripts/: README.md
tool/: coverage_gate.dart
windows/: CMakeLists.txt  platform_serial_plugin.cpp  platform_serial_plugin.h  serial_port.cpp  serial_port.h  serial_port_manager.cpp  serial_port_manager.h
(+168 files in other folders)
